force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__AuthorizedPrescriptionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthorizedPrescriptionId__c</fullName>
    <label>Authorized Prescription</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthorizedPrescriptionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>