force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__AuthorizedPrescriptionObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuthorizedPrescriptionObject__c</fullName>
    <label>Authorized Prescription Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuthorizedPrescriptionObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>