force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__BenefitCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitCategoryCode__c</fullName>
    <label>Benefit Category Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitCategoryCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>