force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__BillablePeriodEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillablePeriodEndDateTime__c</fullName>
    <label>Billable Period End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillablePeriodEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>