force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__BillablePeriodStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__BillablePeriodStartDateTime__c</fullName>
    <label>Billable Period Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BillablePeriodStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>