force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__EnteredById__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnteredById__c</fullName>
    <label>Entered By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnteredById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>