force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__EnteredByObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnteredByObject__c</fullName>
    <label>Entered By Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnteredByObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>