force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__PrescriberId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrescriberId__c</fullName>
    <label>Prescriber</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrescriberId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>