force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__PriorityCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PriorityCodeId__c</fullName>
    <label>Priority Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PriorityCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>