force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__rel_1722508398676_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1722508398676_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoverageBenefitVerificationRequest_P_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>CoverageBenefitVerificationRequest_P_rel</relationshipLabel>
    <relationshipName>rel_1722508398676_end</relationshipName>
    <type>Lookup</type>
</CustomField>